<resources>
    <string name="app_name">MBulakTestApp</string>
    <string name="phone_number">Номер телефона</string>
    <string name="next">Далее</string>
    <string name="phone_number_desciption">Введите номер телефона и нажмите\n“Далее”</string>
    <string name="name">Имя</string>
    <string name="select_password">Выберите пароль</string>
    <string name="password_again">Повторите пароль</string>
    <string name="secret_question">Выберите секретный вопрос</string>
    <string name="answear_to_secret_question">Ответ на секретный вопрос</string>
    <string name="code_from_message">Код из смс-сообщения</string>
    <string name="continue_">Продолжить</string>
    <string name="didnt_get_code">Я не получил код</string>
    <string name="didnt_remember_password">Не помню пароль</string>
</resources>