<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registration.RegistrationActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/first_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/inter_semi_bold"
                android:layout_gravity="center"
                android:text="Регистрация"
                android:textSize="30sp"
                android:textColor="#202020"
                />

            <EditText
                android:id="@+id/et_name"
                android:layout_marginTop="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:hint="@string/name"
                android:textSize="16sp"
                android:textColorHint="#999999"
                android:fontFamily="@font/inter_bold"
                android:background="@drawable/et_background"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/et_number_phone"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:hint="@string/phone_number"
                android:textSize="16sp"
                android:textColorHint="#999999"
                android:fontFamily="@font/inter_bold"
                android:background="@drawable/et_background"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/et_select_password"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:hint="@string/select_password"
                android:textSize="16sp"
                android:textColorHint="#999999"
                android:fontFamily="@font/inter_bold"
                android:background="@drawable/et_background"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/et_password_again"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:hint="@string/password_again"
                android:textSize="16sp"
                android:textColorHint="#999999"
                android:fontFamily="@font/inter_bold"
                android:background="@drawable/et_background"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/et_secret_question"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:hint="@string/secret_question"
                android:textSize="16sp"
                android:textColorHint="#999999"
                android:fontFamily="@font/inter_bold"
                android:background="@drawable/et_background"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/et_answear_to_secret_question"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:hint="@string/answear_to_secret_question"
                android:textSize="16sp"
                android:textColorHint="#999999"
                android:fontFamily="@font/inter_bold"
                android:background="@drawable/et_background"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#E8E8E8"
                    android:backgroundTint="@color/primary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Я согласен с условиями обработки персональных данных"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="#373435"
                    />
            </LinearLayout>


            <Button
                android:id="@+id/btn_next2"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                app:layout_constraintTop_toBottomOf="@+id/et_number_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/next"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="Уже зарегестрированны?"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/inter_bold"
                android:textColor="#FF9900"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/second_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="111dp"
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/dialog_bg2">


            <TextView
                android:id="@+id/tv_congratulate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/inter_extra_bold"
                android:text="Поздравляем!"
                android:textSize="30sp"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/tv_cong_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_congratulate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:text="Вы уже зарегистрированы.\nПерейдите к авторизации."
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="16sp"
                android:textColor="#373435"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btn_next_from_code"
                android:layout_width="0dp"
                android:layout_height="54dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_cong_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="Авторизация"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/tv_dont_take_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_next_from_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="32dp"
                android:text="@string/didnt_remember_password"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/primary"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            />

    </FrameLayout>

</FrameLayout>