<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.phone.PhoneNumberActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="Регистрация"
            android:textSize="30sp"
            android:textColor="#202020"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_registration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="53dp"
            android:textAlignment="center"
            android:text="Введите номер телефона и нажмите\n“Далее”"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:textColor="#373435"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/et_number_phone"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:hint="@string/phone_number"
            android:textSize="16sp"
            android:textColorHint="#999999"
            android:fontFamily="@font/inter_bold"
            android:background="@drawable/et_background"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="16dp" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="54dp"
            app:layout_constraintTop_toBottomOf="@+id/et_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/second_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="49dp"
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/dialog_bg2">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="26dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_x"
                android:layout_marginLeft="26dp" />

            <TextView
                android:id="@+id/tv_congratulate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/inter_extra_bold"
                android:text="Поздравляем!"
                android:textSize="30sp"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/tv_cong_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_congratulate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:text="Вы успешно прошли регистрацию.\nВведите код из смс в поле ниже и\nнажмите “Продолжить”."
                android:fontFamily="@font/inter_medium"
                android:textSize="16sp"
                android:textColor="#373435"
                android:gravity="center_horizontal" />


            <EditText
                android:id="@+id/et_code"
                app:layout_constraintTop_toBottomOf="@+id/tv_cong_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="31dp"
                android:layout_marginStart="57dp"
                android:layout_marginEnd="62dp"
                android:paddingStart="16dp"
                android:hint="@string/code_from_message"
                android:textSize="16sp"
                android:textColorHint="#999999"
                android:fontFamily="@font/inter_bold"
                android:background="@drawable/et_background"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:layout_marginLeft="57dp"
                android:layout_marginRight="62dp" />


            <Button
                android:id="@+id/btn_next_from_code"
                android:layout_width="0dp"
                android:layout_height="54dp"
                app:layout_constraintTop_toBottomOf="@+id/et_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/continue_"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/tv_dont_take_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_next_from_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="32dp"
                android:text="@string/didnt_get_code"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/primary"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            />

    </FrameLayout>

</FrameLayout>